# umarise-wandb

./: README.md  pyproject.toml
umarise_wandb/: __init__.py  anchor.py  callback.py
umarise_wandb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
